tela inicial pronta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyWoofWoof</string>
+    <string name="app_name">AuAu</string>
     <string name="dog_name_1">Ahri</string>
     <string name="dog_name_2">Leia</string>
     <string name="dog_name_3">Seth</string>
